--- a/http_app/pubspec.yaml
+++ b/http_app/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   http: 0.13.5
   dio: 4.0.6
 
+  ## ui
+  cached_network_image: ^3.2.3
+  flutter_vector_icons: ^2.0.0
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
