--- a/start_app/android/app/src/main/AndroidManifest.xml
+++ b/start_app/android/app/src/main/AndroidManifest.xml
@@ -3,10 +3,10 @@
 
 
 
-<!--  -->
+<!-- permissions -->
 
 
-
+<uses-permission android:name="android.permission.INTERNET"/>
 
 
 
@@ -37,6 +37,29 @@
             </intent-filter>
         </activity>
        
+
+
+       <!-- facebook login configuration -->
+
+    <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+    <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/facebook_client_token"/>
+
+
+
+    <activity android:name="com.facebook.FacebookActivity"
+        android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+        android:label="@string/app_name" />
+    <activity
+        android:name="com.facebook.CustomTabActivity"
+        android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+        </intent-filter>
+    </activity>
+
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
