--- a/http_app/pubspec.yaml
+++ b/http_app/pubspec.yaml
@@ -36,14 +36,18 @@ dependencies:
   http: 0.13.5
   dio: 4.0.6
 
+  # state
+  flutter_bloc: ^8.1.1
+
   ## ui
   cached_network_image: ^3.2.3
   flutter_vector_icons: ^2.0.0
-
+  fluttertoast: ^8.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  
 
 dev_dependencies:
   flutter_test:
