--- a/http_app/pubspec.yaml
+++ b/http_app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cached_network_image: ^3.2.3
   flutter_vector_icons: ^2.0.0
   fluttertoast: ^8.1.2
+  lazy_load_scrollview: ^1.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
