--- a/http_app/pubspec.yaml
+++ b/http_app/pubspec.yaml
@@ -38,12 +38,14 @@ dependencies:
 
   # state
   flutter_bloc: ^8.1.1
+  equatable: ^2.0.5
 
   ## ui
   cached_network_image: ^3.2.3
   flutter_vector_icons: ^2.0.0
   fluttertoast: ^8.1.2
   lazy_load_scrollview: ^1.3.0
+  pull_to_refresh: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
