--- a/http_app/pubspec.yaml
+++ b/http_app/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   fluttertoast: ^8.1.2
   lazy_load_scrollview: ^1.3.0
   pull_to_refresh: ^2.0.0
+  google_fonts: ^3.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -75,9 +76,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/fonts/montserrat/
+    - assets/fonts/rowdies/
+    - assets/fonts/our_icons/
+   
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -90,17 +93,35 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/montserrat/Montserrat-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/montserrat/Montserrat-Bold.ttf
+          weight: 700
+
+        - asset: assets/fonts/montserrat/Montserrat-SemiBold.ttf
+          weight: 600
+
+        - asset: assets/fonts/montserrat/Montserrat-Light.ttf
+          weight: 300
+        - asset: assets/fonts/montserrat/Montserrat-Italic.ttf
+          style: italic
+
+    
+    - family: Rowdies
+      fonts:
+        - asset: assets/fonts/rowdies/Rowdies-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/rowdies/Rowdies-Light.ttf
+          weight: 200
+        - asset: assets/fonts/rowdies/Rowdies-Regular.ttf
+          weight: 300
+
+    - family: OurIcons
+      fonts:
+        - asset: assets/fonts/our_icons/OurIcons.ttf
+  
+  
