--- a/start_app/pubspec.yaml
+++ b/start_app/pubspec.yaml
@@ -1,7 +1,7 @@
 name: start_app
 version: 1.0.0+1
 environment:
-  sdk: '>=2.18.2 <3.0.0'
+  sdk: ">=2.18.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -12,27 +12,27 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.6
   animated_bottom_navigation_bar: ^1.1.0
-  fluttertoast: ^8.1.2 
-
+  fluttertoast: ^8.1.2
 
   # utils
   form_field_validator: ^1.1.0
-  
 
   # data persistence
   shared_preferences: ^2.0.15
 
-
-
-
   # firebase pacakages
-  firebase_core: ^2.4.0
-  firebase_auth: ^4.2.2
+  firebase_core: ^2.4.0 # 3.0.0
+
+  firebase_auth: ^4.2.2  # 2.5.0
+
+
   google_sign_in: ^5.4.2
   # firebase_crashlytics: ^3.0.8
   # firebase_messaging: ^14.2.0
   flutter_facebook_auth: ^5.0.6
 
+  # state mgmt
+  flutter_bloc: ^8.1.1
 
   # network and http
 
@@ -52,7 +52,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -64,7 +63,6 @@ flutter:
     - asset/icons/
     - asset/images/
     - asset/fonts/
-
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
