--- a/start_app/android/app/src/main/AndroidManifest.xml
+++ b/start_app/android/app/src/main/AndroidManifest.xml
@@ -6,8 +6,11 @@
 <!-- permissions -->
 
 
-<uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
 
 
