--- a/start_app/pubspec.yaml
+++ b/start_app/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
 
   # utils
   form_field_validator: ^1.1.0
+  file_picker: ^5.2.5
+  permission_handler: ^10.2.0
+  image_picker: ^0.8.6
 
   # data persistence
   shared_preferences: ^2.0.15
