--- a/start_app/android/app/src/main/AndroidManifest.xml
+++ b/start_app/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.start_app">
+    package="com.trendy.store">
 
 
 
-<!-- permissions -->
+<!-- permissions -->flutter pub run change_app_package_name:main com.trendy.store
+
+
+
+
 
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -15,9 +19,9 @@
 
 
    <application
-        android:label="start_app"
+        android:label="Trendy Store"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
