--- a/start_app/android/app/build.gradle
+++ b/start_app/android/app/build.gradle
@@ -26,6 +26,15 @@ apply plugin: 'kotlin-android'
 apply plugin: 'com.google.gms.google-services'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
+
+def keystoreProperties = new Properties() // Map keystore = {}
+
+def keystorePropertiesFile = rootProject.file('key.properties') // File keyFile= File("key.propeprties")
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
+
 android {
     compileSdkVersion 33
     ndkVersion flutter.ndkVersion
@@ -52,13 +61,22 @@ android {
         targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
+    }
+    signingConfigs{
+        release{
+            keyAlias=keystoreProperties['keyAlias']
+            storePassword=keystoreProperties['storePassword']
+            keyPassword=keystoreProperties['keyPassword']
+            storeFile=keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+        }
     }
 
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
 }
