--- a/start_app/pubspec.yaml
+++ b/start_app/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   # firebase_crashlytics: ^3.0.8
   # firebase_messaging: ^14.2.0
   flutter_facebook_auth: ^5.0.6
-
+  firebase_crashlytics: ^3.0.11
+  
   # state mgmt
   flutter_bloc: ^8.1.1
 
